k8s/apps/default/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      hostname: sonarr
      volumes:
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: sonarr
          image: ghcr.io/onedr0p/sonarr-develop:4.0.0.729
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: "512m"
              memory: "2024Mi"
            limits:
              memory: 2024Mi
          ports:
            - containerPort: 8989
              name: web
          volumeMounts:
            - name: arr-media
              mountPath: /data
            - name: config
              mountPath: /config
          startupProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
