k8s/apps/default/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  serviceName: sonarr
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-block
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      hostname: sonarr
      volumes:
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: sonarr
          image: ghcr.io/onedr0p/sonarr-develop:rolling@sha256:6d38becb362bd7f1786a284ee94fe7b7d695598d5555c52902e81ad5a34a22ea
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: "512m"
              memory: "2024Mi"
            limits:
              memory: 2024Mi
          ports:
            - containerPort: 8989
              name: web
          volumeMounts:
            - name: arr-media
              mountPath: /data
            - name: config
              mountPath: /config
          startupProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
